src/assets/styles/egret_overrides.css
/* Universal Overrides for Egret */

.hidden{
  display:none;
}

/* Navigation shorter and fixed to Top */
topbar, app-breadcrumb{
    position:fixed;
    width:100%;
    z-index:3;
}

topbar{
    top:0;
}

.mat-toolbar{
  min-height:48px;
}

.mat-toolbar-row{
  height:48px !important;
}

.branding{
  height:48px;
}

app-breadcrumb{
    top:48px;
}

.rightside-content-hold {
    padding: 104px .03rem 10%;
    overflow-x: hidden;
    overflow-y: scroll;
    display: block;
    position: absolute;
    top: 0;
    height: 100%;
    width: 100%;
}

.rightside-content-hold.has-footer {
    padding: 104px .03rem 10%;
}

@-webkit-keyframes silde_to_top {
    0% {
        bottom: -60px;
    }
    100% {
        bottom: 0px;
        z-index: 1000000;
    }
}

.footer-console-bar {
    position: absolute;
    bottom: 0px;
    width: 100%;
    height: 45px;

    -webkit-animation-name: silde_to_top;
    -webkit-animation-duration: 1s;
    -webkit-animation-timing-function: ease;
    -webkit-animation-iteration-count: 1;
    -webkit-animation-direction: normal;
    -webkit-animation-delay: 0;
    -webkit-animation-play-state: running;
    -webkit-animation-fill-mode: forwards;
}

.footer-console-bar .message {
    font-family: monospace,Courier New,Courier;
    font-size: 9pt;
    color: #00FF00;
    padding: 3px 20px 0px;
    background-color: #000;
    border: 1px solid #222;
    height: 39px;
    white-space: pre-wrap;
    max-height: 42px;
    overflow: hidden;
    margin: 0px;
    line-height: 1;
}

/* Tabbed navigation is fixed too */
.tab-header-fixed .mat-tab-header{
    overflow: hidden;
    position: fixed !important;
    top:104px;
    flex-shrink: 0;
    z-index: 2;
    background:#efefef;
    width: 100%;
}
/*--- Data table ---*/
.datatable-checkbox input[type='checkbox'] {
    margin-top: -10px;
    margin-left: -3px;
}
.mat-tab-body-wrapper{
    padding:64px 16px 16px;
}

/* Cards & Tables */
.mat-card{
  margin:24px;/* This will be deprecated once Grid System is implemented*/
}

.mat-card-table{
  padding:0 !important;
}

.mat-card-table .ngx-datatable{
  margin:0 !important;
}

ngx-datatable .mat-box-shadow{
  box-shadow:none;
}

.mat-card-title-text{
  margin:16px;
}

/* vm-cards */
vm-cards md-card{
  padding:0 !important;
}

vm-card-edit div.md-content{
  padding: 5%;
  width: 90%;
  height: 90%;
  position: relative;
}

